syntax = "proto3";

package ranking;

service RankingService {
    rpc getCityRanking(RankingRequest) returns (stream RankingResponse) {}
}

message RankingRequest {
}

message RankingResponse {
    uint32 placeRanking = 1;
    string cityName = 2;
    uint32 pollutionLevel = 3;
}